--- a/Page 2.html
+++ b/Page 2.html
@@ -33,6 +33,10 @@
     <a target="_blank" href="https://www.instagram.com/">
         <img src="images/instagram.png" alt="Logo Instagram">
     </a>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, corrupti nihil,
+         ullam cum unde deserunt esse 
+        laborum perspiciatis dolorem eius excepturi delectus provident
+         id beatae nam itaque praesentium accusamus animi?</p>
 </body>
 
 </html>
