--- a/Page 2.html
+++ b/Page 2.html
@@ -33,7 +33,7 @@
     <a target="_blank" href="https://www.instagram.com/">
         <img src="images/instagram.png" alt="Logo Instagram">
     </a>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. A, 
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elitddd. A, ddddddddddddddddddd
         quam! Commodi tenetur cum possimus repellendus nesciunt corporis, 
         error eligendi temporibus minus fugiat assumenda nemo nam nihil consequatur sapiente quisquam. Eligendi!git</p>
 </body>
